package app.madar.alaamadarsoft.ui

const val NAME_FIELD_TEST_TAG = "NAME_FIELD_TEST_TAG"
const val AGE_FIELD_TEST_TAG = "AGE_FIELD_TEST_TAG"
const val JOB_TITLE_FIELD_TEST_TAG = "JOB_TITLE_FIELD_TEST_TAG"
const val GENDER_FIELD_TEST_TAG = "GENDER_FIELD_TEST_TAG"
const val ADD_BUTTON_TEST_TAG = "ADD_BUTTON_TEST_TAG"
const val PEOPLE_BUTTON_TEST_TAG = "PEOPLE_BUTTON_TEST_TAG"