package app.madar.alaamadarsoft.domain.model

enum class Gender(val value: String) {
    Male("Male"), Female("Female")
}